# rust-tips

./: Cargo.toml  README.md
t01-match/: Cargo.toml
t01-match/src/: main.rs
t02-iter/: Cargo.toml
t02-iter/src/: main.rs
t03-trait/: Cargo.toml
t03-trait/src/: main.rs
t04-arc/: Cargo.toml
t04-arc/src/: main.rs
t04-rc/: Cargo.toml
t05-enum/: Cargo.toml
t05-enum/src/: main.rs
t06-option/: Cargo.toml
t07-result/: Cargo.toml
t08-ownership/: Cargo.toml
t08-ownership/src/: main.rs
t09-higher-order-fun/: Cargo.toml
t09-higher-order-fun/src/: main.rs
t10-from-to/: Cargo.toml
t10-from-to/src/: main.rs
t11-question-mark/: Cargo.toml
t12-slice/: Cargo.toml
t12-slice/src/: main.rs
t13-box/: Cargo.toml
t13-box/src/: main.rs
t14-generic/: Cargo.toml
t14-generic/src/: main.rs
t241225-match/: Cargo.toml
t241226-iter/: Cargo.toml
t241227-trait/: Cargo.toml
t241228-arc/: Cargo.toml
t241228-rc/: Cargo.toml
t241228-rc/src/: main.rs
t241229-enum/: Cargo.toml
t241229-enum/src/: main.rs
t241230-option/: Cargo.toml
t241230-option/src/: main.rs
t241231-result/: Cargo.toml
t241231-result/src/: main.rs
t250101-ownership/: Cargo.toml
t250101-ownership/src/: main.rs
t250102-higher-order-fun/: Cargo.toml
t250103-from-to/: Cargo.toml
t250104-question-mark/: Cargo.toml
t250104-question-mark/src/: main.rs
t250105-slice/: Cargo.toml
t250106-box/: Cargo.toml
t250107-generic/: Cargo.toml
t250108-reference/: Cargo.toml
t250108-reference/src/: main.rs
t250109-mpsc-channel/: Cargo.toml
t250109-mpsc-channel/src/: main.rs
t250110-return-fun/: Cargo.toml
t250110-return-fun/src/: main.rs
t250111-macro/: Cargo.toml
t250111-macro/src/: main.rs
t250112-arc-mutex/: Cargo.toml
t250112-arc-mutex/src/: main.rs
t250113-type/: Cargo.toml
t250113-type/src/: main.rs
t250114-simple-web/: Cargo.toml
t250114-simple-web/src/: main.rs
t250115-simple-web-with-tokio/: Cargo.toml
t250115-simple-web-with-tokio/src/: main.rs
t250116-simple-web-multi-thread/: Cargo.toml
t250116-simple-web-multi-thread/src/: main.rs
t250117-file-read/: Cargo.toml
t250117-file-read/src/: main.rs
t250118-check-digits/: Cargo.toml
t250118-check-digits/src/: main.rs
t250119-capitalize-words/: Cargo.toml
t250119-capitalize-words/src/: main.rs
t250120-move/: Cargo.toml
t250120-move/src/: main.rs
t250124-rig-gemini/: Cargo.toml
t250124-rig-gemini/src/: main.rs
t250130-rag-system/: Cargo.toml
t250131-rig-text-classifier/: Cargo.toml
t250131-rig-text-classifier/src/: main.rs
t250217-rig-ollama-deepseek-r1/: Cargo.toml
t250217-rig-ollama-deepseek-r1/src/: main.rs
