[workspace.package]
name = "rust-tips"                                       # the name of the package
version = "0.1.0"                                        # the current version, obeying semver
authors = ["lispking <lispking@qq.com>"]                 # the authors of the package
edition = "2021"                                         # the edition of Rust to use
license = "Apache-2.0"                                   # the license of the package
readme = "README.md"                                     # the path to the README file
description = "Rust tips"                                # a description of the package
keywords = ["rust", "tips"]                              # keywords for the package
categories = ["development-tools"]                       # categories for the package
homepage = "https://github.com/lispking/rust-tips.git"
repository = "https://github.com/lispking/rust-tips.git"

[workspace]
resolver = "2"
members = [
    "t241225-match",
    "t241226-iter",
    "t241227-trait",
    "t241228-arc",
    "t241228-rc",
    "t241229-enum",
    "t241230-option",
    "t241231-result",
    "t250101-ownership",
    "t250102-higher-order-fun",
    "t250103-from-to",
    "t250104-question-mark",
    "t250105-slice",
    "t250106-box",
    "t250107-generic",
    "t250108-reference",
    "t250109-mpsc-channel",
    "t250110-return-fun",
    "t250111-macro",
    "t250112-arc-mutex",
    "t250113-type",
    "t250114-simple-web",
    "t250115-simple-web-with-tokio",
]
