[package]
name = "t250116-simple-web-multi-thread"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
