[package]
name = "t250124-rig-gemini"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.95"
rig-core = "0.6.1"
tokio = { version = "1.34.0", features = ["full"] }
